accordion textos y colores

--- a/servicios.html
+++ b/servicios.html
@@ -58,47 +58,60 @@
                 </div>
             </div>
         </section>
+        <section class="backgry p-2"></section>
     </header>
 
     <main>
-        <div class="accordion" id="accordionPanelsStayOpenExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                  Servicio diseño web
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-                <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <!-- ACCORDION -->
+        <div class="px-5 p-5">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                    <p class="acc-title efect-hover" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                    Servicio diseño web
+                    </p>
+                </h2>
+                <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                    <div class="accordion-body">
+                    <p><span class="grey fw-bold">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
+                    Optio odio quae esse repudiandae officiis molestias perferendis aut iure laborum labore nulla repellendus reiciendis dignissimos et, numquam molestiae nesciunt. Nisi tempora iusto dolores eum officia recusandae at quibusdam dolorum.</p>
+                    </div>
                 </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                  Servicio diseño digital y análogo
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-                <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                 </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                  Servicio producción
-                </button>
-              </h2>
-              <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                    <p class="acc-title efect-hover collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                    Servicio diseño digital y análogo
+                    </p>
+                </h2>
+                <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+                    <div class="accordion-body">
+                    <p><span class="grey fw-bold">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
+                    Optio odio quae esse repudiandae officiis molestias perferendis aut iure laborum labore nulla repellendus reiciendis dignissimos et, numquam molestiae nesciunt. Nisi tempora iusto dolores eum officia recusandae at quibusdam dolorum.</p>
+                    </div>
                 </div>
-              </div>
+                </div>
+                <div class="accordion-item">
+                <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                    <p class="acc-title efect-hover collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                    Servicio producción
+                    </p>
+                </h2>
+                <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                    <div class="accordion-body">
+                    <p><span class="grey fw-bold">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
+                    Optio odio quae esse repudiandae officiis molestias perferendis aut iure laborum labore nulla repellendus reiciendis dignissimos et, numquam molestiae nesciunt. Nisi tempora iusto dolores eum officia recusandae at quibusdam dolorum.</p>
+                    </div>
+                </div>
+                </div>
             </div>
-          </div>
+        </div>
+
+        <!-- CONTACTO-->
+        <section class="contacto backgr pb-5 px-5">
+            <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow padd-section">Contáctame >></h2>
+            <p class="text-center my-4 d-none d-md-block">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
+        </section>
     </main>
 
     <!-- FOOTER -->
