--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"> <i class="fas fa-phone"></i> Contacto</a>
+                    <a class="nav-link" href="contacto.html"> <i class="fas fa-phone"></i> Contacto</a>
                 </li>
                 </ul>
             </div>
