mis servicios textos y diseño

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <section class="contacto backgr pb-5 px-5">
 
             <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow padd-section">Contáctame >></h2>
-            <p class="text-center my-4 d-none d-md-block">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
+            <p class="text-center my-4">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
 
             <form>
                 <div class="form-group mb-4">
