--- a/servicios.html
+++ b/servicios.html
@@ -63,55 +63,86 @@
     </header>
 
     <main>
+        <h2 class="display-4 text-center mb-5 grey padd-section">Mis <span class="fw-bold yellow">servicios >></span></h2>
         <!-- ACCORDION -->
-        <div class="px-5 p-5">
+        <div class="px-5 p-2 pb-5 mb-5">
             <div class="accordion" id="accordionPanelsStayOpenExample">
                 <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                    <p class="acc-title efect-hover" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-                    Servicio diseño web
+                    <p class="acc-title efect-hover fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        <i class="fas fa-code px-2"></i> Diseño Web
                     </p>
                 </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
-                    <p><span class="grey fw-bold">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
+                    <p><span class="fw-bold fs-5">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
                     Optio odio quae esse repudiandae officiis molestias perferendis aut iure laborum labore nulla repellendus reiciendis dignissimos et, numquam molestiae nesciunt. Nisi tempora iusto dolores eum officia recusandae at quibusdam dolorum.</p>
+                    <br>
+                    <p><span class="fw-bold fs-5">Valor:</span> $200.000 <span class="fst-italic">(IVA incluido)</span></p>
                     </div>
                 </div>
                 </div>
                 <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                    <p class="acc-title efect-hover collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                    Servicio diseño digital y análogo
+                    <p class="acc-title efect-hover collapsed fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+                    <i class="fas fa-desktop px-2"></i>Diseño Digital y Análogo
                     </p>
                 </h2>
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                     <div class="accordion-body">
-                    <p><span class="grey fw-bold">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
+                    <p><span class="fw-bold fs-5">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
                     Optio odio quae esse repudiandae officiis molestias perferendis aut iure laborum labore nulla repellendus reiciendis dignissimos et, numquam molestiae nesciunt. Nisi tempora iusto dolores eum officia recusandae at quibusdam dolorum.</p>
+                    <br>
+                    <p><span class="fw-bold fs-5">Valor:</span> $120.000 <span class="fst-italic">(IVA incluido)</span></p>
                     </div>
                 </div>
                 </div>
                 <div class="accordion-item">
                 <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                    <p class="acc-title efect-hover collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                    Servicio producción
+                    <p class="acc-title efect-hover collapsed fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                    <i class="fas fa-pencil-ruler px-2"></i> Producción Gráfica
                     </p>
                 </h2>
                 <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                     <div class="accordion-body">
-                    <p><span class="grey fw-bold">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
+                    <p><span class="fw-bold fs-5">Descripción del servicio:</span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo veritatis nam excepturi, maiores pariatur maxime beatae consectetur porro animi enim alias molestiae. Nam, impedit repudiandae nesciunt officiis cumque non laborum?
                     Optio odio quae esse repudiandae officiis molestias perferendis aut iure laborum labore nulla repellendus reiciendis dignissimos et, numquam molestiae nesciunt. Nisi tempora iusto dolores eum officia recusandae at quibusdam dolorum.</p>
+                    <br>
+                    <p><span class="fw-bold fs-5">Valor:</span> $65.000 <span class="fst-italic">(IVA incluido)</span></p>
                     </div>
                 </div>
                 </div>
             </div>
         </div>
 
+        <section class="backgry p-2 mt-5"></section>
+
         <!-- CONTACTO-->
         <section class="contacto backgr pb-5 px-5">
+
             <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow padd-section">Contáctame >></h2>
-            <p class="text-center my-4 d-none d-md-block">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
+            <p class="text-center my-4">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
+
+            <form>
+                <div class="form-group mb-4">
+                    <label class="mb-2">Nombre</label>
+                    <input class="form-control" placeholder="Nombre">
+                </div>
+
+                <div class="form-group mb-4">
+                    <label class="mb-2">Correo electrónico</label>
+                    <input class="form-control" placeholder="Correo electrónico" />
+                </div>
+
+                <div class="form-group">
+                    <label class="mb-2">Mensaje</label>
+                    <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
+                </div>
+
+                <div class="my-3 text-center">
+                    <button class="btn btn-warning text-dark fw-bold">Enviar</button>
+                </div>
+            </form>
         </section>
     </main>
 
