--- a/contacto.html
+++ b/contacto.html
@@ -66,8 +66,8 @@
         <!-- FORM CONTACTO-->
         <section class="contacto backgr pb-5 px-5">
 
-            <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow padd-section">Contáctame >></h2>
-            <p class="text-center my-4 d-none d-md-block">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
+            <h2 id="scrollspyContactame" class="display-4 fw-bold text-center yellow padd-section">Contacto >></h2>
+            <p class="text-center my-4">Si te interesa <span class="fw-bold yellow">realizar un proyecto conmigo</span> y conocer los valores de mi servicio, <span class="fw-bold yellow">¡Escríbeme!</span></p>
 
             <form>
                 <div class="form-group mb-4">
