--- a/index.html
+++ b/index.html
@@ -69,21 +69,31 @@
             <a class="nav class-nav p-3" href="#scrollspyContactame">Contáctame</a>
         </nav>
 
-        <img src="assets/imgs/loading-bar-2021-200.png" alt="año 2021">
-        <h1>Curriculum Vitae</h1>
-        <img src="assets/imgs/imagen-circular-curriculum.png" alt="imagen jacqueline">
-        <h2>Jacqueline Báez</h2>
-    
-        <img src="assets/imgs/icono-sobre-mi-naranjoynegro.jpg" alt="sobre mí">
-        <h3>Sobre mí</h3>
-        <p>Soy Productora Gráfica y Diseñadora de Ambientes, titulada del Instituto profesional Duoc UC.</p>
-        <p>En simples palabras, me defino como una persona responsable, detallista,  hábil, puntual, organizada,
-        dinámica y con mucha iniciativa.</p>
-        <p>En el ámbito profesional, me motivo con facilidad al realizar cosas nuevas, lo cual me permite aprender 
-        con mayor rapidez. Disfruto del trabajo en equipo y el trabajo individual lo tomo como un gran desafío. 
-        Actualmente trabajo de manera freelance, apoyando a emprendimientos, desarrollando diversos trabajos ligados 
-        a piezas gráficas digitales y análogas.</p>
-    
+        <!-- CV -->
+        <section class="cv text-center px-5 mx-3 pb-5">
+
+            <h2 id="scrollspySobremi" class="display-3 padd-section">Curriculum <span class="fw-bold yellow">Vitae >></span></h2>
+            <h2 class="display-3 padd-section fs-2 pt-0">Jacqueline <span class="fw-bold yellow">Báez</span></h3>
+
+
+            <p class="my-4 pb-4">
+                Nací el año 1993 en la ciudad de <span class="fw-bold">Viña del Mar.</span>
+                <br>
+                Durante mi infancia siempre mostré mis dotes <span class="fw-bold">por el área artística</span> cuando finalicé mis estudios superiores, intenté buscar lo que más se amoldara a mis gustos.
+                <br>
+                Por esto inicie en la carrera de <span class="fw-bold">Arquitectura</span>, el año 2012, la cual no finalicé, pero si me enseño la <span class="fw-bold">importancia de la disciplina, estructura y el orden</span>.
+                <br>
+                <br>
+                El año <span class="fw-bold">2014</span> ingré a la carrera de <span class="fw-bold">Diseño de Ambientes</span> de la cual me titulé pero no ejercí, 
+                <br> 
+                en esta descubrí mi gusto por el <span class="fw-bold">área del diseño gráfico,</span> en la mayoría de mis trabajos, dediqué mucho tiempo a esto.
+                <br>
+                El año <span class="fw-bold">2017</span> inicié <span class="fw-bold">Producción Gráfica</span> carrera que mezclaba el diseño junto a la producción que va ligado completamente a lo manual,
+                <br>
+                Finalizando el año 2021,<span class="fw-bold">opté por complementar mis estudios </span> y aprender del área de <span class="fw-bold">Desarrollo y Diseño Web.</span>
+            </p>
+
+        </section>
         <img src="assets/imgs/icono-estudios-naranjoynegro.jpg" alt="estudios">
         <h3>Estudios</h3>
         <ul>
