--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <p class="my-4 pb-1 fs-5">
                 Conoce  <span class="fw-bold yellow">más sobre mí,</span> visitando mis trabajos más recientes:
             </p>
-            <p>Haz click en <a class="yellow fw-bold fs-1" href="portafolio.html">Mi Portafolio</a><i class="fas fa-mouse-pointer fa-2x px-3"></i></p> 
+            <p>Visita <a class="yellow fw-bold fs-1" href="portafolio.html">Mi Portafolio</a><i class="fas fa-mouse-pointer fa-2x px-3"></i></p> 
             <section class="pt-5 grey">
                 <i class="fab fa-linkedin-in px-2"></i><a href="https://www.linkedin.com/in/jacqueline-báez-camus-017156205/" target="_blank" rel="noopener noreferrer">Linkedin</a>
                 <i class="fab fa-github px-2"></i><a href="https://github.com/Fiorelotto" target="_blank" rel="noopener noreferrer">Github</a>
