funcionamiento scrollspy de nav en index.html

--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
     <main>
         <!-- NAVLINK -->
         <nav class="nav px-4 backgr justify-content-evenly sticky-top">
-            <a class="nav active class-nav p-3" aria-current="page" href="#scrollspySobremi">Sobre mí</a>
-            <a class="nav class-nav p-3" href="#scrollspyMistrabajos">Mis trabajos</a>
-            <a class="nav class-nav p-3" href="#scrollspyContactame">Contáctame</a>
+            <a class="nav active class-nav p-3" aria-current="page" href="#scrollspyCurriculumvitae">Curriculum Vitae</a>
+            <a class="nav class-nav p-3" href="#scrollspyEducacion">Educación</a>
+            <a class="nav class-nav p-3" href="#scrollspyPortafolio">Portafolio</a>
         </nav>
 
         <!-- CV -->
         <section class="cv text-center px-5 mx-3 pb-5">
 
-            <h2 id="scrollspySobremi" class="display-3 padd-section">Curriculum <span class="fw-bold yellow">Vitae >></span></h2>
+            <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Curriculum <span class="fw-bold yellow">Vitae >></span></h2>
             <h2 class="display-3 padd-section fs-2 pt-0">Jacqueline <span class="fw-bold yellow">Báez</span></h3>
 
 
@@ -94,7 +94,7 @@
         <!-- EDUCACION-->
         <section class="educacion text-center px-5 mx-3 pb-5">
 
-            <h2 id="scrollspySobremi" class="display-3 padd-section">Educación<span class="fw-bold yellow"> >></span></h2>
+            <h2 id="scrollspyEducacion" class="display-3 padd-section">Educación<span class="fw-bold yellow"> >></span></h2>
 
             <p class="my-4 pb-4">
                 Inicié en la carrera de <span class="fw-bold">Arquitectura</span>, el año 2012, la cual no finalicé, pero si me enseño la <span class="fw-bold">importancia de la disciplina, estructura y el orden</span>.
@@ -159,7 +159,7 @@
         <!-- MI PORTAFOLIO-->
         <section class="mi-portafolio text-center px-5 mx-3 pb-5">
 
-            <h2 id="scrollspySobremi" class="display-3 padd-section">Mi <span class="fw-bold yellow">Portafolio >></span></h2>
+            <h2 id="scrollspyPortafolio" class="display-3 padd-section">Mi <span class="fw-bold yellow">Portafolio >></span></h2>
 
             <p class="my-4 pb-1 fs-5">
                 Conoce  <span class="fw-bold yellow">más sobre mí,</span> visitando mis trabajos más recientes:
