--- a/portafolio.html
+++ b/portafolio.html
@@ -33,6 +33,9 @@
                     <a class="nav-link active" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
                 </li>
                 <li class="nav-item">
