integración de 3 proyectos en html

--- a/portafolio.html
+++ b/portafolio.html
@@ -122,6 +122,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Healthy Food, utilizando CSS, en hojas de estilo externas a html. Landing Page con estructura básica en el cual se utilizaron divs, etiquetas semánticas como header, section y footer.
                             </p>
+                            <a class="btn btn-outline-warning fw-bold" href="primer-landing.html" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -134,6 +135,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Iguana Page, utilizando CSS y estructura de etiquetas semánticas. El enfoque del proyecto se enfocó en utilizar de manera adecuada la propiedad display y modelo de cajas.
                             </p>
+                            <a class="btn btn-outline-warning fw-bold" href="iguana-page.html" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -146,6 +148,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Cuppon, utilizando Bootstrap y CSS. El enfoque de este proyecto consistió en construir un Landing Page de forma responsiva, pudiendo verse en teléfono y computador.
                             </p>
+                            <a class="btn btn-outline-warning fw-bold" href="cuppon.html" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
