--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Jacqueline Báez - Contacto</title>
+    <title>Jacqueline Báez</title>
     <link rel="icon" type="image/png" href="assets/img/favicon-jb-16x16.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
@@ -35,6 +35,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
+                      Trabajos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="primer-landing.html">Proyecto 1 - Primer Landing</a></li>
+                      <li><a class="dropdown-item" href="iguana-page.html">Proyecto 2 - Iguana Page</a></li>
+                      <li><a class="dropdown-item" href="cuppon.html">Proyecto 3 - Cuppon</a></li>
+                    </ul>
+                  </li>
                 <li class="nav-item">
                     <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
                 </li>
