funcionamiento button en banner

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <span class="yellow"><i class="fas fa-quote-left"></i></span> <span class="fw-italic"></span> El optimismo firme y paciente siempre rinde sus frutos <span class="yellow"><i class="fas fa-quote-right"></i></span>
                     </p>
                     <div class="mb-5 pb-2">
-                        <button class="btn btn-lg btn-outline-warning text-light me-4">Trabajos</button>
-                        <button class="btn btn-lg btn-warning text-light">Contáctame</button>
+                        <a class="btn btn-outline-warning btn-lg me-4" href="portafolio.html" role="button">Portafolio</a>
+                        <a class="btn btn-warning btn-lg text-dark" href="contacto.html" role="button">Contáctame</a>
                     </div>
                 </div>
             </div>
