--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <main>
         <!-- NAVLINK -->
-        <nav class="nav px-4 backgr justify-content-evenly sticky-top">
+        <nav class="nav px-4 py-3 backgr justify-content-evenly sticky-top">
             <a class="nav active class-nav p-3" aria-current="page" href="#scrollspyCurriculumvitae">Curriculum Vitae</a>
             <a class="nav class-nav p-3" href="#scrollspyEducacion">Educación</a>
             <a class="nav class-nav p-3" href="#scrollspyPortafolio">Portafolio</a>
@@ -187,9 +187,9 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="backgry text-center p-4 grey">
-        <p class="mb-0 pb-3"><i class="far fa-copyright"></i> Jacqueline Báez 2022. Todos los derechos reservados.</p>
-        <div class="grey"><i class="fab fa-html5 fa-2x px-2"></i><i class="fab fa-github fa-2x px-2"></i><i class="fab fa-git fa-2x px-2"></i><i class="fab fa-css3-alt fa-2x px-2"></i><i class="fas fa-terminal fa-2x px-2"></i></div>
+    <footer class="backgry text-center p-5 grey">
+        <p class="mt-2 mb-1 pb-3"><i class="far fa-copyright"></i> Jacqueline Báez 2022. Todos los derechos reservados.</p>
+        <div class="grey mb-2"><i class="fab fa-html5 fa-2x px-2"></i><i class="fab fa-github fa-2x px-2"></i><i class="fab fa-git fa-2x px-2"></i><i class="fab fa-css3-alt fa-2x px-2"></i><i class="fas fa-terminal fa-2x px-2"></i></div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
