--- a/contacto.html
+++ b/contacto.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
+                    <a class="nav-link" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
@@ -49,7 +49,7 @@
                     <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacto.html"> <i class="fas fa-phone"></i> Contacto</a>
+                    <a class="nav-link active" href="contacto.html"> <i class="fas fa-phone"></i> Contacto</a>
                 </li>
                 </ul>
             </div>
