--- a/iguana-page.html
+++ b/iguana-page.html
@@ -30,13 +30,13 @@
             <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
+                    <a class="nav-link" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
                       Trabajos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -59,10 +59,10 @@
 
     <main>
         <!-- NAVLINK -->
-        <nav class="nav px-4 py-3 backgr justify-content-evenly sticky-top">
-            <a class="nav active class-nav p-3" aria-current="page" href="primer-landing.html">Primer Landing</a>
-            <a class="nav class-nav p-3" href="iguana-page.html">Iguana Page</a>
-            <a class="nav class-nav p-3" href="cuppon.html">Cuppon</a>
+        <nav class="nav px-4 backgr justify-content-evenly sticky-top">
+            <a class="nav active class-nav py-4 px-3" aria-current="page" href="primer-landing.html">Primer Landing</a>
+            <a class="nav class-nav py-4 px-3" href="iguana-page.html">Iguana Page</a>
+            <a class="nav class-nav py-4 px-3" href="cuppon.html">Cuppon</a>
         </nav>
 
         <!-- CV -->
