--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
     <main>
         <!-- NAVLINK -->
-        <nav class="nav px-4 py-3 backgr justify-content-evenly sticky-top">
-            <a class="nav active class-nav p-3" aria-current="page" href="#scrollspyCurriculumvitae">Curriculum Vitae</a>
-            <a class="nav class-nav p-3" href="#scrollspyEducacion">Educación</a>
-            <a class="nav class-nav p-3" href="#scrollspyPortafolio">Portafolio</a>
+        <nav class="nav px-4 backgr justify-content-evenly sticky-top">
+            <a class="nav active class-nav py-4 px-3" aria-current="page" href="#scrollspyCurriculumvitae">Curriculum Vitae</a>
+            <a class="nav class-nav py-4 px-3" href="#scrollspyEducacion">Educación</a>
+            <a class="nav class-nav py-4 px-3" href="#scrollspyPortafolio">Portafolio</a>
         </nav>
 
         <!-- CV -->
