--- a/portafolio.html
+++ b/portafolio.html
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
+                    <a class="nav-link" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
+                    <a class="nav-link active" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
@@ -69,10 +69,10 @@
 
     <main>
         <!-- NAVLINK -->
-        <nav class="nav px-4 py-3 backgr justify-content-evenly sticky-top">
-            <a class="nav active class-nav p-3" aria-current="page" href="#scrollspySobremi">Sobre mí</a>
-            <a class="nav class-nav p-3" href="#scrollspyMistrabajos">Mis trabajos</a>
-            <a class="nav class-nav p-3" href="#scrollspyContactame">Contáctame</a>
+        <nav class="nav px-4 backgr justify-content-evenly sticky-top">
+            <a class="nav active class-nav p-4" aria-current="page" href="#scrollspySobremi">Sobre mí</a>
+            <a class="nav class-nav p-4" href="#scrollspyMistrabajos">Mis trabajos</a>
+            <a class="nav class-nav p-4" href="#scrollspyContactame">Contáctame</a>
         </nav>
 
         <!-- SOBRE MI -->
