--- a/servicios.html
+++ b/servicios.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
+                    <a class="nav-link" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
@@ -46,7 +46,7 @@
                     </ul>
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
+                    <a class="nav-link active" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html"> <i class="fas fa-phone"></i> Contacto</a>
