edición primer landing

--- a/iguana-page.html
+++ b/iguana-page.html
@@ -69,6 +69,7 @@
         <section class="cv text-center px-5 mx-3 pb-5">
 
             <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Iguana <span class="fw-bold yellow">Page >></span></h2>
+        </section>
     </main>
 
     <!-- FOOTER -->
