--- a/primer-landing.html
+++ b/primer-landing.html
@@ -40,7 +40,7 @@
                       Trabajos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="primer-landing.html">Proyecto 1 - Primer Landing</a></li>
+                      <li><a class="dropdown-item" href="primer-landing.html #scrollspyCurriculumvitae">Proyecto 1 - Primer Landing</a></li>
                       <li><a class="dropdown-item" href="iguana-page.html">Proyecto 2 - Iguana Page</a></li>
                       <li><a class="dropdown-item" href="cuppon.html">Proyecto 3 - Cuppon</a></li>
                     </ul>
@@ -57,18 +57,29 @@
         </nav>
     </header>
 
+    <section class="hero-1 text-center py-5 mt-0">
+        <div class="container">
+            <div class="ms-auto col-12 col-md-12 px-4">
+                <h1 class="pt-2 my-5 grey">
+                    Proyecto <br> <span class="fw-bold yellow">Nº1</span>
+                </h1>
+            </div>
+        </div>
+    </section>
+
     <main>
         <!-- NAVLINK -->
         <nav class="nav px-4 backgr justify-content-evenly sticky-top">
-            <a class="nav active class-nav py-4 px-3" aria-current="page" href="primer-landing.html">Primer Landing</a>
+            <a class="nav active class-nav py-4 px-3" aria-current="page" href="#scrollspyCurriculumvitae">Primer Landing</a>
             <a class="nav class-nav py-4 px-3" href="iguana-page.html">Iguana Page</a>
             <a class="nav class-nav py-4 px-3" href="cuppon.html">Cuppon</a>
         </nav>
 
         <!-- CV -->
         <section class="cv text-center px-5 mx-3 pb-5">
-
             <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Primer <span class="fw-bold yellow">Landing >></span></h2>
+            <img class="container" src="assets/img/2022-01-12-00.08.57.png" alt="">
+        </section>
     </main>
 
     <!-- FOOTER -->
