--- a/cuppon.html
+++ b/cuppon.html
@@ -69,6 +69,7 @@
         <section class="cv text-center px-5 mx-3 pb-5">
 
             <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Cuppon<span class="fw-bold yellow"> >></span></h2>
+        </section>
     </main>
 
     <!-- FOOTER -->
