--- a/portafolio.html
+++ b/portafolio.html
@@ -120,7 +120,7 @@
         <section class="backgry p-2 mt-3"></section>
 
         <!-- MIS TRABAJOS-->
-        <section class="mis-trabajos px-5">
+        <section class="mis-trabajos px-5 text-center">
             <h2 id="scrollspyMistrabajos" class="display-4 text-center mb-5 grey padd-section">Mis <span class="fw-bold yellow">trabajos >></span></h2>
 
             <div class="row">
@@ -132,7 +132,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Healthy Food, utilizando CSS, en hojas de estilo externas a html. Landing Page con estructura básica en el cual se utilizaron divs, etiquetas semánticas como header, section y footer.
                             </p>
-                            <a class="btn btn-outline-warning fw-bold" href="primer-landing.html" role="button">Ver más</a>
+                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="primer-landing.html" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Iguana Page, utilizando CSS y estructura de etiquetas semánticas. El enfoque del proyecto se enfocó en utilizar de manera adecuada la propiedad display y modelo de cajas.
                             </p>
-                            <a class="btn btn-outline-warning fw-bold" href="iguana-page.html" role="button">Ver más</a>
+                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="iguana-page.html" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                             <p class="card-text pb-3">
                                 Creación de Proyecto Cuppon, utilizando Bootstrap y CSS. El enfoque de este proyecto consistió en construir un Landing Page de forma responsiva, pudiendo verse en teléfono y computador.
                             </p>
-                            <a class="btn btn-outline-warning fw-bold" href="cuppon.html" role="button">Ver más</a>
+                            <a class="btn btn-warning fw-bold mb-3 px-4 white" href="cuppon.html" role="button">Ver más</a>
                         </div>
                     </div>
                 </div>
