cambio de curriculum

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a class="nav class-nav py-4 px-3" href="#scrollspyPortafolio">Portafolio</a>
         </nav>
 
-        <!-- CV -->
+        <!-- Curriculum -->
         <section class="cv text-center px-5 mx-3 pb-5">
 
             <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Curriculum <span class="fw-bold yellow">Vitae >></span></h2>
