--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a class="nav class-nav py-4 px-3" href="#scrollspyPortafolio">Portafolio</a>
         </nav>
 
-        <!-- Curriculum -->
+        <!-- CURRICULUM -->
         <section class="cv text-center px-5 mx-3 pb-5">
 
             <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Curriculum <span class="fw-bold yellow">Vitae >></span></h2>
@@ -104,7 +104,7 @@
 
         <section class="backgry p-2 mt-3"></section>
 
-        <!-- EDUCACION-->
+        <!-- EDUCACION -->
         <section class="educacion text-center px-5 mx-3 pb-5">
 
             <h2 id="scrollspyEducacion" class="display-3 padd-section">Educación<span class="fw-bold yellow"> >></span></h2>
@@ -169,7 +169,7 @@
 
         <section class="backgry p-2 mt-3"></section>
 
-        <!-- MI PORTAFOLIO-->
+        <!-- MI PORTAFOLIO -->
         <section class="mi-portafolio text-center px-5 mx-3 pb-5">
 
             <h2 id="scrollspyPortafolio" class="display-3 padd-section">Mi <span class="fw-bold yellow">Portafolio >></span></h2>
