--- a/iguana-page.html
+++ b/iguana-page.html
@@ -65,7 +65,7 @@
             <a class="nav class-nav py-4 px-3" href="cuppon.html">Cuppon</a>
         </nav>
 
-        <!-- CV -->
+        <!-- CURRICULUM -->
         <section class="cv text-center px-5 mx-3 pb-5">
 
             <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Iguana <span class="fw-bold yellow">Page >></span></h2>
