footer diseño e información

--- a/cuppon.html
+++ b/cuppon.html
@@ -74,8 +74,12 @@
 
     <!-- FOOTER -->
     <footer class="backgry text-center p-5 grey">
+        <p class="fw-bold fs-4" href="#">JACQUELINE <span class="white">BÁEZ</span></p>
         <p class="mt-2 mb-1 pb-3"><i class="far fa-copyright"></i> Jacqueline Báez 2022. Todos los derechos reservados.</p>
-        <div class="grey mb-2"><i class="fab fa-html5 fa-2x px-2"></i><i class="fab fa-github fa-2x px-2"></i><i class="fab fa-git fa-2x px-2"></i><i class="fab fa-css3-alt fa-2x px-2"></i><i class="fas fa-terminal fa-2x px-2"></i></div>
+        <div class="grey mb-2">
+            <i class="fab fa-linkedin-in px-2 fa-2x"></i><a href="https://www.linkedin.com/in/jacqueline-báez-camus-017156205/" target="_blank" rel="noopener noreferrer">Linkedin</a>
+            <i class="fab fa-github px-2 fa-2x"></i><a href="https://github.com/Fiorelotto" target="_blank" rel="noopener noreferrer">Github</a>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
