integración iguanapage.html y css

--- a/iguana-page.html
+++ b/iguana-page.html
@@ -1,91 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iguana Page</title>
+    <link rel="icon" type="image/png" href="assets/img/favicon-iguana-page-16x16.png">
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/iguana-page.css">
+    <script src="https://kit.fontawesome.com/37c9cd860a.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Jacqueline Báez - Iguana Page</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon-jb-16x16.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
+
     <header>
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light backgry px-4 py-2">
-            <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="#">JACQUELINE <span class="white">BÁEZ</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse nav justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html"> <i class="fas fa-user-alt"></i> Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portafolio.html"> <i class="fas fa-portrait"></i> Portafolio</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="far fa-file-code"></i>
-                      Trabajos
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="primer-landing.html">Proyecto 1 - Primer Landing</a></li>
-                      <li><a class="dropdown-item" href="iguana-page.html">Proyecto 2 - Iguana Page</a></li>
-                      <li><a class="dropdown-item" href="cuppon.html">Proyecto 3 - Cuppon</a></li>
-                    </ul>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="servicios.html"> <i class="fas fa-briefcase"></i> Servicios</a> 
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contacto.html"> <i class="fas fa-phone"></i> Contacto</a>
-                </li>
-                </ul>
-            </div>
-            </div>
-        </nav>
+        <h1>IGUANAS</h1>
+        <img class="img_header" src="assets/img/bg-header.jpg" alt="Iguana header">
     </header>
 
     <main>
-        <!-- NAVLINK -->
-        <nav class="nav px-4 backgr justify-content-evenly sticky-top">
-            <a class="nav active class-nav py-4 px-3" aria-current="page" href="primer-landing.html">Primer Landing</a>
-            <a class="nav class-nav py-4 px-3" href="iguana-page.html">Iguana Page</a>
-            <a class="nav class-nav py-4 px-3" href="cuppon.html">Cuppon</a>
-        </nav>
+        <div class="desc-section">
+            <div class="class_s">
+                <p class="paragraph_d1">
+                    La iguana es un reptil perteneciente a la familia Iguanadiae. Su tamaño está entre los 15 cm hasta 
+                    los 2 metros de largo y puede llegar a pesar unos 15 kg. Cuando están jóvenes tienen una coloración 
+                    con tonos verdes y al ir madurando predomina un color grisáceo con crestas o espinas en su espalda.
+                </p>
 
-        <!-- CURRICULUM -->
-        <section class="cv text-center px-5 mx-3 pb-5">
+                <p class="paragraph_d2">
+                    La alimentación de la iguana va variando según su etapa de vida, pero la mayor parte de sus años 
+                    son herbívoras. Viven en lugares tropicales con mucha vegetación y es un animal que puede ser 
+                    domesticado.
+                </p>
+            </div>
+            <img class="img_s1" src="assets/img/iguana-1.jpg" alt="Iguana"> 
+        </div> 
 
-            <h2 id="scrollspyCurriculumvitae" class="display-3 padd-section">Iguana <span class="fw-bold yellow">Page >></span></h2>
-        </section>
+        <div class="icons-section">
+            <h2>CARACTERÍSTICAS</h2>
+
+            <div class="class_s1">
+                <i class="far fa-eye fa-3x"></i>
+                <p>Tercer  ojo</p>
+            </div>
+
+            <div class="class_s1">
+                <i class="far fa-hand-peace fa-3x"></i>
+                <p>Pacíficas</p>
+            </div>
+
+            <div class="class_s1">
+                <i class="fas fa-paint-brush fa-3x"></i>
+                <p>Cambian de color</p>
+            </div>
+        </div>
     </main>
 
-    <!-- FOOTER -->
-    <footer class="backgry text-center p-5 grey">
-        <p class="fw-bold fs-4" href="#">JACQUELINE <span class="white">BÁEZ</span></p>
-        <p class="mt-2 mb-1 pb-3"><i class="far fa-copyright"></i> Jacqueline Báez 2022. Todos los derechos reservados.</p>
-        <div class="grey mb-2">
-            <i class="fab fa-linkedin-in px-2 fa-2x"></i><a href="https://www.linkedin.com/in/jacqueline-báez-camus-017156205/" target="_blank" rel="noopener noreferrer">Linkedin</a>
-            <i class="fab fa-github px-2 fa-2x"></i><a href="https://github.com/Fiorelotto" target="_blank" rel="noopener noreferrer">Github</a>
-        </div>
+    <section>
+        <img class="imgs-igua" src="assets/img/iguana-2.jpg" alt="Iguana colores">
+        <img class="imgs-igua" src="assets/img/iguana-3.jpg" alt="Iguana rostro">
+        <img class="imgs-igua" src="assets/img/iguana-4.jpg" alt="Iguanas varias">
+    </section>
+
+    <footer>
+        <p>Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más.</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous">
-    </script>
 </body>
-
 </html>
